# advent-of-code

./: .gitignore  Cargo.toml
2021/: Cargo.toml
2021/scripts/: bench.sh
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  lib.rs  main.rs  solution.rs  utils.rs
2022/: Cargo.toml
2022/src/: shared.rs
2023/: Cargo.toml
aoc_utils/: Cargo.toml
aoc_utils/src/: collections.rs  lib.rs  pathfinding.rs  pointer.rs
src/: day01.rs  day02.rs  main.rs
