[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"
path = "src/shared.rs"

[dependencies]
aoc-utils = { path = "../aoc_utils" }
aoc-runner = { git = "https://github.com/ArmandDu/rust-aoc-runner.git" }
concat-idents = "1.1.3"
itertools = "0.10.5"
serde_json = "1.0.89"