[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-utils = { path = "../aoc_utils" }
aoc-runner = { git = "https://github.com/ArmandDu/rust-aoc-runner.git", tag = "v1.1.0" }
concat-idents = "1.1.3"
itertools = "0.12.0"
rayon = "1.6.1"
regex = "1.7.0"
memoize = "0.4.2"
